--- a/mm_movement/package.xml
+++ b/mm_movement/package.xml
@@ -52,6 +52,12 @@
   <build_depend>rospy</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <exec_depend>rospy</exec_depend>
+  <build_depend>message_generation</build_depend>
+  <build_export_depend>message_runtime</build_export_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <depend>std_msgs</depend>
+  <depend>actionlib_msgs</depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
